<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_home_black"
            android:title="@string/navigation_drawer_main"/>
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_add_circle_outline_black"
            android:title="@string/navigation_drawer_create"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_map_black"
            android:title="@string/navigation_drawer_maps"/>
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list_black"
            android:title="@string/navigation_drawer_match_list"/>
        <item
            android:id="@+id/nav_score"
            android:icon="@drawable/ic_content_paste_black"
            android:title="@string/navigation_drawer_score"/>
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black"
            android:title="@string/navigation_drawer_user_profile"/>
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_equalizer_black"
            android:title="@string/stats"/>
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/ic_info_outline_black"
            android:title="@string/rules"/>
        <item
            android:id="@+id/nav_user_guide"
            android:icon="@drawable/ic_help_outline_black"
            android:title="@string/user_guide"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_highlight_off_black"
            android:title="@string/navigation_drawer_logout"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black"
            android:title="@string/navigation_drawer_exit"/>
    </group>

</menu>
