<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/score_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_text_score_picker"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/score_picker_score_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_picker_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/numpad_text_0"
        android:textColor="@android:color/black"
        android:textSize="30sp"/>

    <GridLayout
        android:id="@+id/numpad_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_picker_score_display"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="4">

        <Button
            android:id="@+id/numpad_1"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_1"/>

        <Button
            android:id="@+id/numpad_2"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_2"/>

        <Button
            android:id="@+id/numpad_3"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_3"/>

        <Button
            android:id="@+id/numpad_4"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_4"/>

        <Button
            android:id="@+id/numpad_5"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_5"/>

        <Button
            android:id="@+id/numpad_6"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_6"/>

        <Button
            android:id="@+id/numpad_7"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_7"/>

        <Button
            android:id="@+id/numpad_8"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_8"/>

        <Button
            android:id="@+id/numpad_9"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_9"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/numpad_double_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FAFAFA"
                android:text="@string/numpad_text_double_score"/>

        </LinearLayout>

        <Button
            android:id="@+id/numpad_0"
            android:background="#FAFAFA"
            android:text="@string/numpad_text_0"/>

        <ImageButton
            android:id="@+id/numpad_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FAFAFA"
            android:contentDescription="@string/icon_description_score_picker_cancel"
            android:src="@drawable/ic_keyboard_backspace_black"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numpad_grid"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/numpad_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="@string/dialog_cancel"/>

        <Button
            android:id="@+id/numpad_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="@string/dialog_match"/>

        <Button
            android:id="@+id/numpad_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FAFAFA"
            android:text="@string/dialog_ok"/>

    </LinearLayout>

</RelativeLayout>
