<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/game_text_score_picker"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <NumberPicker
        android:id="@+id/score_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_picker_title"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_picker"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/score_picker_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel"/>

        <Button
            android:id="@+id/score_picker_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_match"/>

        <Button
            android:id="@+id/score_picker_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_ok"/>

    </LinearLayout>

</RelativeLayout>
