<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/score_table_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="300dp"
    android:minWidth="300dp"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/score_table_column_titles"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_gravity="center"
            android:text="@string/game_score_table_round"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/game_score_table_points"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_gravity="center"
            android:text="@string/game_score_table_melds"
            android:textColor="@android:color/black"/>

    </TableRow>

</TableLayout>
