<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.jassatepfl.CountersFragment">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/variants_graph"
            android:layout_width="400dip"
            android:layout_height="400dip"
            android:contentDescription="@string/variants_graph"/>
        <ImageView
            android:id="@+id/partners_graph"
            android:layout_width="400dip"
            android:layout_height="400dip"
            android:contentDescription="@string/partners_graph"/>
        <ImageView
            android:id="@+id/won_with_graph"
            android:layout_width="400dip"
            android:layout_height="400dip"
            android:contentDescription="@string/won_with_graph"/>

    </LinearLayout>
</ScrollView>
