<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/goal_picker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_text_goal_picker"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <NumberPicker
        android:id="@+id/goal_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goal_picker_title"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goal_picker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/goal_picker_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/goal_picker_space"
            android:text="@string/dialog_cancel"/>

        <Space
            android:id="@+id/goal_picker_space"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/goal_picker_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/goal_picker_space"
            android:text="@string/dialog_ok"/>

    </RelativeLayout>

</RelativeLayout>
