<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background=""
    android:orientation="horizontal"
    android:padding="5dip">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/description"
        android:text="@string/snippet_match_rank" />

    <TextView
        android:id="@+id/rank_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/rank" />

    <TextView
        android:id="@+id/players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rank"
        android:text="@string/snippet_player_list" />

    <TextView
        android:id="@+id/players_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/players" />

    <TextView
        android:id="@+id/variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/players"
        android:text="@string/snippet_game_variant" />

    <TextView
        android:id="@+id/variant_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/variant" />

    <TextView
        android:id="@+id/expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/variant"
        android:text="@string/snippet_expiration_date" />

    <TextView
        android:id="@+id/expiration_date_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/expiration_date" />

</RelativeLayout>
